kubernetes/security-custom-provider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP_NAME__-deployment
  namespace: __NAMESPACE__
  labels:
    app: __APP_NAME__
    tags.datadoghq.com/env: "__ENV_TAG__"
    tags.datadoghq.com/service: "__APP_NAME__"
    tags.datadoghq.com/version: "__VERSION__"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __APP_NAME__
  template:
    metadata:
      labels:
        app: __APP_NAME__
        tags.datadoghq.com/env: "__ENV_TAG__"
        tags.datadoghq.com/service: "__APP_NAME__"
        tags.datadoghq.com/version: "__VERSION__"
    spec:
      containers:
        - name: __APP_NAME__
          image: __IMAGE__
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 150m
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 240
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
